# agent-hackathon

./: .envtemplate  .gitignore  README.md  graph.md  pyproject.toml  requirements.txt  requirements.txt.legacy
.streamlit/: secrets.toml
notebooks/: convert_shape_to_geojson.ipynb  cost_anayzer.ipynb  cropsimulation.ipynb  filter_and_display.ipynb  filter_by_settlement.ipynb  fix_geojson.ipynb  max_farmer.geojson  merge_rcom_and_polygon.ipynb  reorganize_and_output_eachpolygon.ipynb  reorganize_farmland.ipynb
notebooks/data/: clustered_farmland.geojson  clustered_farmland_with_cluster_id.geojson  farmers.geojson  reclassified_land.geojson  rice.agro  split_farmland.geojson
notebooks/data/geojson_filtered_by_settlement/: 田畑畑田.geojson  筑地.geojson
notebooks/data/part/: 1111clustered_farmland_with_farmers.geojson  clustered_farmland.geojson  clustered_farmland_witheachpolygon.geojson
notebooks/filter/: filter_and_display.ipynb  filter_by_ClassificationOfLandCodeName.ipynb
notebooks/optimizer/: existing_farmer.ipynb  reorganize.ipynb  reorganize_and_output_eachpolygon.ipynb  reorganize_farmland.ipynb  ricefieldorfield.ipynb
src/: for_setup.py
src/agent/: Agent.py  agent.py  node.py  state.py
src/agent/constants/: inputs.py  role.py  tasks.py
src/agent/llm/: llm.py
src/app/: __init__.py  app.py
src/app/components/: chart_component.py  chat_component.py  colored_component.py  colored_map_reorg_component.py  (+2 more)
src/functions/: classify_by_tahata.py  cost_analyzer.py  cropsimulation.py  filiter.py  fix_reorganization.py  reorganize.py  reorganize_farmland.ipynb
(+17 files in other folders)
