[tool.poetry]
name = "agent-hackathon"
version = "0.1.0"
description = ""
authors = ["shinybell <raffinement.shun.2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.42.2"
dotenv = "^0.9.9"
folium = "^0.19.4"
streamlit-folium = "^0.24.0"
markdown = "^3.7"
langchain-google-genai = "^2.0.10"
langgraph = "^0.2.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
